--------------------------------------------------------------------------------------------------
Release notes version 1.7.4_beta : Enhancements, modifications and corrected bugs since version 1.7.3 :
--------------------------------------------------------------------------------------------------
28/06/16 (TRUST)  Bug fixed   : Fixed bug about using dt_impr_ustar and  dt_impr_ustar_mean_only together
--------------------------------------------------------------------------------------------------
Release notes version 1.7.3 : Enhancements, modifications and corrected bugs since version 1.7.2 :
--------------------------------------------------------------------------------------------------
03/06/16 (Tools)  Major change: Add TRUST_PLOT2D and TRUST_WIZZARD (Option -disable-plot2d added to configure)
25/05/16 (TRUST)  Portability : Released version of metis upgrated to 5.1.0
25/05/16 (TRUST)  Portability : Released version of PETSc upgrated to 3.6.3 (and some packages whose MUMPS and METIS)
25/05/16 (TRUST)  Minor change: Option -disable-check_sources and -for_appli_salome added to the TRUST configure tool
23/05/16 (TRUST)  Major change: Post in som on symetrie treated differently (TRUST_POST_SOM_SYMETRIE_ERREUR, TRUST_POST_SOM_NON_PARA, TRUST_POST_SOM_NO_DIRICHLET in Champ_base.cpp)
18/05/16 (Kernel) Portability : MEDCoupling updated to 780 version
21/03/16 (Tools)  Portability : Released version of VisIt is upgraded to 2.10.0
21/03/16 (TRUST)  Bug fixed   : Fixed bug in Traitement_particulier of Canal with QC fluid and VDF discretization
16/02/16 (TRUST)  Bug fixed   : k-eps turbulence model with concentration (it is OK now with several constituents)
04/02/16 (TRUST)  Minor change: Option -without-host_file added to the TRUST configure tool (Do not load the environnement variables specified in an env_src/HOST_*.sh file)
03/02/16 (TRUST)  Minor change: Option -disable-check added to the TRUST configure tool (Disable checks for external packages)